contrast: decouple vars from other components fixes #1308

--- a/src/less/core/contrast.less
+++ b/src/less/core/contrast.less
@@ -70,11 +70,11 @@
 @contrast-button-active-background:             fade(@contrast-color, 70%);
 @contrast-button-active-color:                  @contrast-inverted-color;
 
-@contrast-button-primary-background:            @button-primary-background;
+@contrast-button-primary-background:            #00a8e6;
 @contrast-button-primary-color:                 @contrast-color;
-@contrast-button-primary-hover-background:      @button-primary-hover-background;
+@contrast-button-primary-hover-background:      #35b3ee;
 @contrast-button-primary-hover-color:           @contrast-color;
-@contrast-button-primary-active-background:     @button-primary-active-background;
+@contrast-button-primary-active-background:     #0091ca;
 @contrast-button-primary-active-color:          @contrast-color;
 
 @contrast-icon-hover-color:                     fade(@contrast-color, 70%);
@@ -88,7 +88,7 @@
 @contrast-icon-button-active-color:             @contrast-inverted-color;
 
 @contrast-text-muted-color:                     fade(@contrast-color, 60%);
-@contrast-text-primary-color:                   @text-primary-color;
+@contrast-text-primary-color:                   #2d7091;
 
 
 /* ========================================================================
